Fix: Person img and p-tag spacing.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -257,7 +257,7 @@ section#team{
                 text-align: justify;
                 font-family: 'Oswald', sans-serif;//$font;
                 font-weight: 200;
-                width: 500px;
+                width: 60%;
                 line-height: 1.5;
                 font-size: 1.25em;
                 span.name{
@@ -277,8 +277,8 @@ section#team{
             div.pic{
                 border: 1px solid transparent;
                 border-radius: 5px;
-                width: 400px;
-                height: 500px;
+                width: 35%;
+                height: 30em;
                 box-shadow: 0px 0px 20px 2px #444;
                 img{
                     object-fit: cover;  
